-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.870 2011-03-06 22:16:46 guru Exp $
-----------------------------------------------------------------------------------------
2011-03-01	pwessel
	* GMT 4.5.6 finalized and released.  GMT cvs archive moved to GMT4
	  GMT5 branch merged to new trunk and converted to subversion.
-----------------------------------------------------------------------------------------

2011-03-06	pwessel
	* share/cpt:		GMT_jet.cpt had two bad values causing discontinuities.

2011-03-01	pwessel
	* GNUmakefile:		Added make get-gshhs-cvs to get the pre-release GSHHS from the
				pwessel ftp.  Updated gmt_shore.c message on this subject.

2011-03-01	remko
	* gmt_init.c:		On Windows: Look for HOMEPATH after HOME for setting GMT_HOMEDIR

2011-02-28	remko
	* doc/* examples/*:	Run documentation and tests now as it is done in GMT5.

2011-02-27	pwessel
	* gmt_init.c:		Processing of mathangle symbol (-Sm[bfl]) confused the unit detector.
				Added test scripts to check for correct symbol size plotting
				under both CM and INCH environments.

2011-02-27	jluis
	* scripts/GMT_*.sh:	Replaced $AWK for awk since the $AWK variable was not
				set in those the scripts anyway.

2011-02-25	pwessel
	* x2sys/x2sys_datalist.c:	When geographic data and -R it failed to consider periodic lons.
	* x2sys/x2sys_get.c:	The -N option did not work properly, and the reported Y|N flags
				reflected the entire track on not just the portion inside the
				region.  Man page updated to clarify what is returned.
	* gmt_cdf.c:		Apply netcdf fix; thanks to Sebastian Heimann.
	* gmt_nc.c:		---"---

2011-02-25	jluis
	* gmt_grdio.c:		Increase the size of the string array in GMT_grd_get_units() to
				avoid 'Buffer overrun' that occurred with long description strings

2011-02-23	pwessel
	* spotter/backtracker.c:	For -W, now report full-length major/minor axes and not