@@ -1,5 +1,5 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.870 2011-03-06 22:16:46 guru Exp $
+	$Id: ChangeLog,v 1.871 2011-03-06 23:34:32 guru Exp $
 -----------------------------------------------------------------------------------------
 2011-03-01	pwessel
 	* GMT 4.5.6 finalized and released.  GMT cvs archive moved to GMT4
@@ -8,6 +8,7 @@
 
 2011-03-06	pwessel
 	* share/cpt:		GMT_jet.cpt had two bad values causing discontinuities.
+	* mex/grdwrite.c:	Round-off could lead to false detection of non-equal spacing.
 
 2011-03-01	pwessel
 	* GNUmakefile:		Added make get-gshhs-cvs to get the pre-release GSHHS from the
